# Guppy

./: .editorconfig  .env.example  .gitignore  .vercelignore  CHECKPOINT_T1_1_PHASE1_COMPLETE.md  CHECKPOINT_T1_1_PHASE3A_COMPLETE.md  CHECKPOINT_T1_1_PHASE3B_COMPLETE.md  CLAUDE.md  CLAUDE_CODE_HANDOFF.md  CLAUDE_REVIEW_SUMMARY.md  CONTRIBUTING.md  CREDENTIALS_AND_API_KEYS_GUIDE.md  CREDENTIALS_AUDIT.md  Council.bat  DAILY_WORKFLOW.md  Dockerfile  GAP_ANALYSIS_AGENT_SPAWNING_2026-04-25.md  GETTING_STARTED.md  GOALS.md  Guppy.bat  Guppy.spec  Guppy_WebUI_Launcher.bat  HANDOFF_COPILOT_2026-04-11.md  IMPLEMENTATION_COMPLETE.txt  LLAMA_CPP_ROCM_BUILD_GUIDE.md  LOCAL_PRODUCTION_SETUP.md  Modelfile.code  Modelfile.fast  Modelfile.guppy  Modelfile.main  Modelfile.merlin  Modelfile.merlin-code  OpenAI_WebUI_Launcher.bat  Open_Interpreter.bat  P0_PARITY_TESTING_PLAN_2026-04-23.md  PACKAGING.md  PHASE2_COMPLETE.md  PHASE_1_COMPLETION_SUMMARY.md  PHASE_1_IMPLEMENTATION_TASKS.md  PHASE_2_IMPLEMENTATION_TASKS.md  (+80 more)
.claude/: settings.json  settings.local.json
.qtcreator/: project.json.qtds
.quarantine/: README.md
AI_Project/: AI_Project.code-workspace  HANDSHAKE_PROTOCOL.txt  LAUNCHER_FIX_NOTES.txt  LAUNCHER_README.md  Mobile_Terminal.bat  Open_Interpreter_Instructions.txt  autonomous_operations_report.txt  create_shortcut.vbs  gmail_auto_cleanup.py  interpreter_journal.md  mobile_interpreter.css  run_chat.py.txt  ryan_profile_summary.txt  start_interpreter.py  startup_journal.py  update_handshake.py
api/: app.py  auth.py  index.py  requirements.txt
compat_shims/: README.md  debug_console.py  github_tools.py  guppy_api_auth.py  guppy_memory.py  guppy_ui.py  inference_router.py
config/: beta_tool_allowlist.txt  booklet.json  instances.json  tool_permissions.json
docker/: docker-compose.vllm.yml
docs/: API.md  ARCHITECTURE.md  ARCHITECTURE_IMPLEMENTATION_STATUS.md  AUTHORIZATION_AND_FEATURE_FLAG_DEEP_DIVE.md  BE_TR01_BACKEND_EXECUTION_TRANCHE.md  BUILD_TRUTH_PATH.md  CLAUDE_CODE_HANDOFF.md  CLEANUP_BEFORE_DEMO_CHECKLIST.md  CONFIG_SCHEMAS.md  CREDENTIALS_AUDIT.md  DAILY_WORKFLOW.md  DATABASES.md  FEATURES.md  FINAL_HANDOFF_PREP.md  GETTING_STARTED.md  GUPPY_PRODUCT_NORTH_STAR.md  HANDOFF_2026-05-04.md  INTERFACE_IMPROVEMENT_PLAN.md  LEGACY_QUARANTINE_PROTOCOL.md  LEGACY_SURFACES.md  LIBRARY.md  LIVE_ARCHITECTURE.md  LOCAL_LLM_BENCHMARK_SPEC.md  LOCAL_LLM_IMPLEMENTATION_PLAN.md  M2_ENGINEERING_PLAN.md  M2_IMPLEMENTATION_BACKLOG.md  M2_LAUNCH_CHECKLIST.md  M2_SCOPE_LOCK.md  M2_UI_ARCHITECTURE_GUIDE.md  M2_UI_QUICK_REFERENCE.md  M2_WEEK1_IMPLEMENTATION_QUEUE.md  MASTER_PHASE_PLAN.md  MEMPALACE_EVALUATION.md  MODEL_ROUTING.md  ONE_SHEET_STATUS.md  PACKAGING.md  PC_CONTROL.md  PRODUCT_FEATURE_FILTER.md  PROJECT_BOB_INTEGRATION_CONTRACT.md  PROJECT_BRIEF.md  (+13 more)
documentation/: ARCHITECTURE.md  BASE_FUNCTIONALITY_RECOVERY.md  README.md  SECURITY.md  TRUTH_AUDIT.md
guppy_core/: __init__.py  debug_flags.py  network_utils.py  system_prompt.py  tool_metrics.py  tool_registry.py  tool_runner.py
instructions/: DEVELOPMENT.md  OPERATIONS.md  README.md
legacy_surfaces/: guppy_ui_legacy.py  merlin_ui_legacy.py
migrations/: 0002_provider_registry.py  0003_inference_queue.py  env.py
models/: Modelfile  Modelfile_Merlin
runtime/: agent_performance.jsonl  app_settings.json  beta_policy_report.json  connector_state.json  diagnostics_guppy_20260412_074930.json  diagnostics_guppy_20260412_080644.json  diagnostics_guppy_20260412_080647.json  diagnostics_guppy_20260412_080650.json  diagnostics_guppy_20260412_080711.json  diagnostics_guppy_20260412_080958.json  guppy.heartbeat  hub.starting  instance_state.json  integration_events.jsonl  launcher_registry.json  merlin.heartbeat  (+24 more)
(+1645 files in other folders)
