[project]
name = "guppy"
version = "0.1.0"
description = "Guppy runtime and API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.32.0",
  "python-jose[cryptography]>=3.3.0",
  "python-multipart>=0.0.9",
  "httpx>=0.27.0",
  "openai>=2.29.0",
  "anthropic>=0.86.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
  ".venv",
  "runtime",
  "webui_data",
  "__pycache__",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
