[project]
name = "guppy"
version = "0.1.0"
description = "Guppy runtime and API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0,<1.0",
  "uvicorn>=0.32.0,<1.0",
  "python-jose[cryptography]>=3.3.0,<4.0",
  "python-multipart>=0.0.9,<1.0",
  "httpx>=0.27.0,<1.0",
  "openai>=2.29.0,<3.0",
  "anthropic>=0.86.0,<1.0",
  "alembic>=1.13.0,<2.0",
  "sqlalchemy>=2.0.0,<3.0",
  "loguru>=0.7.0,<1.0",
  "rich>=13.0.0,<15.0",
  "pydantic-settings>=2.0.0,<3.0",
  "anyio>=4.0.0,<5.0",
  "pytest>=8.0.0,<9.0",
  "pytest-asyncio>=0.23.0,<1.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
  ".venv",
  "runtime",
  "webui_data",
  "__pycache__",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
