[project]
name = "guppy"
version = "0.1.0"
description = "Guppy runtime and API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  # ── Web framework ──────────────────────────────────────────────────────────
  "fastapi>=0.115.0,<1.0",
  "uvicorn>=0.32.0,<1.0",
  "python-multipart>=0.0.9,<1.0",
  "anyio>=4.0.0,<5.0",

  # ── Auth / security ────────────────────────────────────────────────────────
  "python-jose[cryptography]>=3.3.0,<4.0",
  "keyring>=25.0.0,<27.0",

  # ── HTTP clients ───────────────────────────────────────────────────────────
  "httpx>=0.27.0,<1.0",

  # ── AI providers ──────────────────────────────────────────────────────────
  "openai>=2.29.0,<3.0",
  "anthropic>=0.86.0,<1.0",

  # ── Database ───────────────────────────────────────────────────────────────
  "alembic>=1.13.0,<2.0",
  "sqlalchemy>=2.0.0,<3.0",

  # ── Logging / display ─────────────────────────────────────────────────────
  "loguru>=0.7.0,<1.0",
  "rich>=13.0.0,<15.0",
  "tabulate>=0.9.0,<1.0",
  "humanize>=4.0.0,<5.0",

  # ── Config / validation ────────────────────────────────────────────────────
  "pydantic-settings>=2.0.0,<3.0",

  # ── Document parsing ──────────────────────────────────────────────────────
  "pdfplumber>=0.11.0,<1.0",
  "python-docx>=1.1.0,<2.0",
  "openpyxl>=3.1.0,<4.0",
  "python-pptx>=1.0.0,<2.0",
  "chardet>=5.0.0,<6.0",

  # ── Image / media ─────────────────────────────────────────────────────────
  "pillow>=10.0.0,<13.0",

  # ── System / desktop ──────────────────────────────────────────────────────
  "psutil>=6.0.0,<8.0",
  "pyperclip>=1.8.0,<2.0",
  "watchdog>=5.0.0,<7.0",

  # ── Text / NLP utilities ──────────────────────────────────────────────────
  "tiktoken>=0.8.0,<1.0",
  "markdown>=3.6,<4.0",
  "arrow>=1.3.0,<2.0",

]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0",
  "pytest-asyncio>=0.23.0,<1.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
  ".venv",
  "runtime",
  "webui_data",
  "__pycache__",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
